[package]
name = "todo"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/SciMind2460/todo-rust"
repository = "https://github.com/SciMind2460/todo-rust"
keywords = ["cli", "todo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
rusqlite = { version = "0.35.0", features = ["bundled", "time"] }
termcolor = "1.4.1"
time = { version = "0.3.41", features = ["parsing", "local-offset"] }
