[package]
name = "todo-rust-demo"
version = "0.1.0"
edition = "2024"
authors = ["Kurt Heiritz (pseudo) saarthkarkera@gmail.com"]
description = "A to-do CLI tool written in Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/SciMind2460/todo-rust"
repository = "https://github.com/SciMind2460/todo-rust"
keywords = ["cli", "todo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
colored = "3.0.0"
rusqlite = { version = "0.36.0", features = ["bundled", "time"] }
time = { version = "0.3.41", features = ["parsing", "local-offset"] }
